<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_browser"
            android:title="@string/browser"
            />
        <item
            android:id="@+id/nav_launch_worker"
            android:icon="@drawable/ic_menu_worker"
            android:title="@string/Worker"
            />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Camera"
            />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_menu_micro"
            android:title="@string/Audio"
            />
        <item
            android:id="@+id/nav_accellerator"
            android:icon="@drawable/ic_main_accelerator"
            android:title="@string/Acellerator"
            />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/Profile"
            />
    </group>
</menu>