<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mirea.gulyaevstepanalekseevich.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mirea.gulyaevstepanalekseevich.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mirea.gulyaevstepanalekseevich.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/dataFragment"
        android:name="com.mirea.gulyaevstepanalekseevich.mireaproject.DataFragment"
        android:label="fragment_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/nav_browser"
        android:name="com.mirea.gulyaevstepanalekseevich.mireaproject.WebViewFragment"
        android:label="fragment_web_view"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/nav_launch_worker"
        android:name="com.mirea.gulyaevstepanalekseevich.mireaproject.workFragment"
        android:label="fragment_work"
        tools:layout="@layout/fragment_work" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="com.mirea.gulyaevstepanalekseevich.mireaproject.CameraFragment"
        android:label="fragment_camera"
        tools:layout="@layout/fragment_camera" />
    <fragment
        android:id="@+id/nav_audio"
        android:name="com.mirea.gulyaevstepanalekseevich.mireaproject.AudioFragment"
        android:label="fragment_audio"
        tools:layout="@layout/fragment_audio" />
    <fragment
        android:id="@+id/nav_accellerator"
        android:name="com.mirea.gulyaevstepanalekseevich.mireaproject.AcceleratorFragment"
        android:label="fragment_accellerator"
        tools:layout="@layout/fragment_accellerator" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.mirea.gulyaevstepanalekseevich.mireaproject.NavProfileFragment"
        android:label="fragment_nav_profile"
        tools:layout="@layout/fragment_nav_profile" />
</navigation>